--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -19,6 +19,8 @@ jobs:
     steps:
       - name: prepare mxe
         run: |
+          sudo apt-get update -qq ;
+          sudo apt-get install -qq autopoint gperf intltool libltdl-dev libtool-bin lzip;
           git clone --depth=1 https://github.com/mxe/mxe mxe
           cd mxe
           echo "JOBS := 4" >> settings.mk
@@ -32,7 +34,7 @@ jobs:
         run: |
           cd mpv
           ./bootstrap.py
-          env PATH=$PWD/../mxe/usr/bin:$PATH DEST_OS=win32 TARGET=${{ matrix.target }} ./waf configure
+          env PATH=$PWD/../mxe/usr/bin:$PATH DEST_OS=win32 TARGET=${{ matrix.target }} ./waf configure --enable-libmpv-shared 
           env PATH=$PWD/../mxe/usr/bin:$PATH DEST_OS=win32 TARGET=${{ matrix.target }} ./waf build
           cd ..
       - name: upload artifact
