--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,4 +1,4 @@
-name: Windows
+name: mpv-build
 on: 
   schedule:
     - cron:  '0 17 * * *'
@@ -17,7 +17,14 @@ jobs:
       matrix:
         target: [x86_64-w64-mingw32.static, i686-w64-mingw32.static]
     steps:
+      - name: cache mxe
+        id: cache-mxe
+        uses: actions/cache@v2
+        with:
+          path: mxe
+          key: ${{ matrix.target }}-mxe
       - name: prepare mxe
+        if: steps.cache-mxe.outputs.cache-hit != 'true'
         run: |
           sudo apt-get update -qq ;
           sudo apt-get install -qq autopoint gperf intltool libltdl-dev libtool-bin lzip;
@@ -35,10 +42,42 @@ jobs:
           cd mpv
           ./bootstrap.py
           env PATH=$PWD/../mxe/usr/bin:$PATH DEST_OS=win32 TARGET=${{ matrix.target }} ./waf configure --enable-libmpv-shared 
-          env PATH=$PWD/../mxe/usr/bin:$PATH DEST_OS=win32 TARGET=${{ matrix.target }} ./waf build
+          env PATH=$PWD/../mxe/usr/bin:$PATH DEST_OS=win32 TARGET=${{ matrix.target }} ./waf build          
           cd ..
+          mkdir binary
+          cp build/mpv* binary/
       - name: upload artifact
         uses: actions/upload-artifact@v1
         with:
-          path: mpv/build
-          name: ${{ matrix.target }}-mpv
+          path: binary
+          name: mpv-${{ matrix.target }}
+
+  iOS:
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        target: [distribution, development]
+    steps:      
+      - name: prepare dependencies
+        run: |
+          brew install yasm
+
+      - name: Check out code 
+        uses: actions/checkout@v2
+        with:
+          ref: master
+
+      - name: build mpv
+        run: |
+          cd ios
+          ./download.sh 
+          ./build.sh -e ${{ matrix.target }}
+          cd ..
+          mkdir binary
+          cp ios/lib/* binary/
+
+      - name: upload artifact
+        uses: actions/upload-artifact@v1
+        with:
+          path: binary
+          name: mpv-ios-${{ matrix.target }}
