--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -92,8 +92,8 @@ jobs:
     steps:          
       - name: prepare toolchain
         run: |
-          sudo apt-get update -qq ;
-          sudo apt-get install -qq nasm;
+          sudo apt-get update -qq;
+          sudo apt-get install -qq yasm;
       - name: Check out code 
         uses: actions/checkout@v2
         with:
