--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -88,7 +88,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        target: [armv7l, arm64, x86, x86_64]
+        target: [armv7l, arm64]
     steps:          
       - name: prepare toolchain
         run: |
