--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -94,7 +94,7 @@ jobs:
       - name: prepare toolchain
         run: |
           sudo apt-get update -qq;
-          sudo apt-get install -qq yasm;
+          sudo apt-get install -qq nasm;
       - name: Check out code 
         uses: actions/checkout@v2
         with:
