--- a/.github/workflows/mpvbuild.yml
+++ b/.github/workflows/mpvbuild.yml
@@ -45,7 +45,7 @@ jobs:
           env PATH=$PWD/../mxe/usr/bin:$PATH DEST_OS=win32 TARGET=${{ matrix.target }} ./waf build          
           cd ..
           mkdir binary
-          cp build/mpv* binary/
+          cp mpv/build/mpv* binary/
       - name: upload artifact
         uses: actions/upload-artifact@v1
         with:
