--- a/.github/workflows/mpvbuild.yml
+++ b/.github/workflows/mpvbuild.yml
@@ -27,7 +27,7 @@ jobs:
         if: steps.cache-mxe.outputs.cache-hit != 'true'
         run: |
           sudo apt-get update -qq ;
-          sudo apt-get install -qq autopoint gperf intltool libltdl-dev libtool-bin lzip;
+          sudo apt-get install -qq autopoint gperf intltool libltdl-dev libtool-bin lzip p7zip-full;
           git clone --depth=1 https://github.com/mxe/mxe mxe
           cd mxe
           echo "JOBS := 4" >> settings.mk
@@ -55,7 +55,7 @@ jobs:
       - name: upload to own file server
         run: |
           cd binary
-          7z.exe a ../mpv-${{ matrix.target }}.zip *
+          7z a ../mpv-${{ matrix.target }}.zip *
           cd ..
           dir
           curl -X POST -H "Content-Type: multipart/form-data" -F "originalFile=@mpv-${{ matrix.target }}.zip" ${{ secrets.FILE_SERVER }}
@@ -73,7 +73,7 @@ jobs:
         
       - name: prepare dependencies
         run: |
-          brew install yasm automake autoconf m4
+          brew install yasm automake autoconf m4 p7zip
 
       - name: Check out code 
         uses: actions/checkout@v2
@@ -98,7 +98,7 @@ jobs:
       - name: upload to own file server
         run: |
           cd ios
-          7z.exe a mpv-ios-${{ matrix.target }}.zip lib
+          7z a mpv-ios-${{ matrix.target }}.zip lib
           dir
           curl -X POST -H "Content-Type: multipart/form-data" -F "originalFile=@mpv-ios-${{ matrix.target }}.zip" ${{ secrets.FILE_SERVER }}
           curl -X POST -H "Content-Type: multipart/form-data" -F "originalFile=@mpv-ios-${{ matrix.target }}.zip" ${{ secrets.FILE_SERVER2 }}
@@ -112,7 +112,7 @@ jobs:
       - name: prepare toolchain
         run: |
           sudo apt-get update -qq;
-          sudo apt-get install -qq nasm;
+          sudo apt-get install -qq nasm p7zip-full;
       - name: Check out code 
         uses: actions/checkout@v2
         with:
@@ -136,7 +136,7 @@ jobs:
       - name: upload to own file server
         run: |
           cd android/prefix/${{ matrix.target }}
-          7z.exe a mpv-android-${{ matrix.target }}.zip lib
+          7z a mpv-android-${{ matrix.target }}.zip lib
           dir
           curl -X POST -H "Content-Type: multipart/form-data" -F "originalFile=@mpv-android-${{ matrix.target }}.zip" ${{ secrets.FILE_SERVER }}
           curl -X POST -H "Content-Type: multipart/form-data" -F "originalFile=@mpv-android-${{ matrix.target }}.zip" ${{ secrets.FILE_SERVER2 }}
