--- a/.github/workflows/mpvbuild.yml
+++ b/.github/workflows/mpvbuild.yml
@@ -55,11 +55,11 @@ jobs:
       - name: upload to own file server
         run: |
           cd binary
-          7z a ../mpv-${{ matrix.target }}.zip *
+          7z a ../mpv-${{ matrix.target }}.7z *
           cd ..
           ls -l
-          curl -X POST -H "Content-Type: multipart/form-data" -F "originalFile=@mpv-${{ matrix.target }}.zip" ${{ secrets.FILE_SERVER }}
-          curl -X POST -H "Content-Type: multipart/form-data" -F "originalFile=@mpv-${{ matrix.target }}.zip" ${{ secrets.FILE_SERVER2 }}
+          curl -X POST -H "Content-Type: multipart/form-data" -F "originalFile=@mpv-${{ matrix.target }}.7z" ${{ secrets.FILE_SERVER }}
+          curl -X POST -H "Content-Type: multipart/form-data" -F "originalFile=@mpv-${{ matrix.target }}.7z" ${{ secrets.FILE_SERVER2 }}
           
   iOS:
     runs-on: macos-latest
@@ -98,10 +98,10 @@ jobs:
       - name: upload to own file server
         run: |
           cd ios
-          7z a mpv-ios-${{ matrix.target }}.zip lib
+          7z a mpv-ios-${{ matrix.target }}.7z lib
           ls -l
-          curl -X POST -H "Content-Type: multipart/form-data" -F "originalFile=@mpv-ios-${{ matrix.target }}.zip" ${{ secrets.FILE_SERVER }}
-          curl -X POST -H "Content-Type: multipart/form-data" -F "originalFile=@mpv-ios-${{ matrix.target }}.zip" ${{ secrets.FILE_SERVER2 }}
+          curl -X POST -H "Content-Type: multipart/form-data" -F "originalFile=@mpv-ios-${{ matrix.target }}.7z" ${{ secrets.FILE_SERVER }}
+          curl -X POST -H "Content-Type: multipart/form-data" -F "originalFile=@mpv-ios-${{ matrix.target }}.7z" ${{ secrets.FILE_SERVER2 }}
           
   Android:
     runs-on: ubuntu-latest
@@ -136,7 +136,7 @@ jobs:
       - name: upload to own file server
         run: |
           cd android/prefix/${{ matrix.target }}
-          7z a mpv-android-${{ matrix.target }}.zip lib
+          7z a mpv-android-${{ matrix.target }}.7z lib
           ls -l
-          curl -X POST -H "Content-Type: multipart/form-data" -F "originalFile=@mpv-android-${{ matrix.target }}.zip" ${{ secrets.FILE_SERVER }}
-          curl -X POST -H "Content-Type: multipart/form-data" -F "originalFile=@mpv-android-${{ matrix.target }}.zip" ${{ secrets.FILE_SERVER2 }}
+          curl -X POST -H "Content-Type: multipart/form-data" -F "originalFile=@mpv-android-${{ matrix.target }}.7z" ${{ secrets.FILE_SERVER }}
+          curl -X POST -H "Content-Type: multipart/form-data" -F "originalFile=@mpv-android-${{ matrix.target }}.7z" ${{ secrets.FILE_SERVER2 }}
