upload via quic

--- a/.github/workflows/mpvbuild.yml
+++ b/.github/workflows/mpvbuild.yml
@@ -44,20 +44,35 @@ jobs:
           cd ..
           mkdir binary
           cp mpv/build/mpv* binary/
+          
       - name: upload artifact
         uses: actions/upload-artifact@v1
         with:
           path: binary
           name: mpv-${{ matrix.target }}
 
+      - name: Set up Go 1.15
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.15
+        id: go
+
+      - name: Build transfer command
+        run: |
+          git clone --depth=1 https://github.com/missdeer/transfer.git gopath
+          cd gopath
+          go build -ldflags="-s -w" -o bin/transfer
+          cd ..
+
       - name: upload to own file server
         run: |
+          export GOPATH=$PWD/gopath
           cd binary
           7z a ../mpv-${{ matrix.target }}.7z *
           cd ..
           ls -l
           curl -X POST -H "Content-Type: multipart/form-data" -F "originalFile=@mpv-${{ matrix.target }}.7z" ${{ secrets.FILE_SERVER }}
-          curl -X POST -H "Content-Type: multipart/form-data" -F "originalFile=@mpv-${{ matrix.target }}.7z" ${{ secrets.FILE_SERVER2 }}
+          $GOPATH/bin/transfer -m upload -c ${{ secrets.FILE_SERVER3 }} -p quic mpv-${{ matrix.target }}.7z
           
   iOS:
     runs-on: macos-latest
@@ -93,13 +108,27 @@ jobs:
           path: ios/lib
           name: mpv-ios-${{ matrix.target }}
 
+      - name: Set up Go 1.15
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.15
+        id: go
+
+      - name: Build transfer command
+        run: |
+          git clone --depth=1 https://github.com/missdeer/transfer.git gopath
+          cd gopath
+          go build -ldflags="-s -w" -o bin/transfer
+          cd ..
+
       - name: upload to own file server
         run: |
+          export GOPATH=$PWD/gopath
           cd ios
           7z a mpv-ios-${{ matrix.target }}.7z lib
           ls -l
           curl -X POST -H "Content-Type: multipart/form-data" -F "originalFile=@mpv-ios-${{ matrix.target }}.7z" ${{ secrets.FILE_SERVER }}
-          curl -X POST -H "Content-Type: multipart/form-data" -F "originalFile=@mpv-ios-${{ matrix.target }}.7z" ${{ secrets.FILE_SERVER2 }}
+          $GOPATH/bin/transfer -m upload -c ${{ secrets.FILE_SERVER3 }} -p quic mpv-ios-${{ matrix.target }}.7z
           
   Android:
     runs-on: ubuntu-latest
@@ -131,10 +160,24 @@ jobs:
           path: android/prefix/${{ matrix.target }}/lib/
           name: mpv-android-${{ matrix.target }}
 
+      - name: Set up Go 1.15
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.15
+        id: go
+
+      - name: Build transfer command
+        run: |
+          git clone --depth=1 https://github.com/missdeer/transfer.git gopath
+          cd gopath
+          go build -ldflags="-s -w" -o bin/transfer
+          cd ..
+
       - name: upload to own file server
         run: |
+          export GOPATH=$PWD/gopath
           cd android/prefix/${{ matrix.target }}
           7z a mpv-android-${{ matrix.target }}.7z lib
           ls -l
           curl -X POST -H "Content-Type: multipart/form-data" -F "originalFile=@mpv-android-${{ matrix.target }}.7z" ${{ secrets.FILE_SERVER }}
-          curl -X POST -H "Content-Type: multipart/form-data" -F "originalFile=@mpv-android-${{ matrix.target }}.7z" ${{ secrets.FILE_SERVER2 }}
+          $GOPATH/bin/transfer -m upload -c ${{ secrets.FILE_SERVER3 }} -p quic mpv-android-${{ matrix.target }}.7z
