--- a/.github/workflows/mpvbuild.yml
+++ b/.github/workflows/mpvbuild.yml
@@ -1,7 +1,7 @@
 name: mpv-build
 on: 
   schedule:
-    - cron:  '0 17 * * 2'
+    - cron:  '0 17 * * *'
   push:
     paths:
       - '.github/workflows/mpvbuild.yml'
@@ -44,7 +44,7 @@ jobs:
           cp mpv/build/mpv* binary/
           export BINARY=$PWD/binary
           cd /${{ matrix.mingw_arch }}/bin/
-          cp zlib1.dll xvidcore.dll swscale-5.dll swresample-3.dll sdl2.dll postproc-55.dll lua51.dll libzstd.dll libxml2-2.dll libx265.dll libx264-159.dll libwinpthread-1.dll libwebpmux-3.dll libwebp-7.dll libwavpack-1.dll libvulkan-1.dll libvorbisenc-2.dll libvorbis-0.dll libunistring-2.dll libtheoraenc-1.dll libtheoradec-1.dll libtasn1-6.dll libstdc++-6.dll libsrt.dll libspeex-1.dll librtmp-1.dll libpng16-16.dll libpcre-1.dll libp11-kit-0.dll libopus-0.dll libopenjp2-7.dll libopencore-amrwb-0.dll libopencore-amrnb-0.dll libopenal-1.dll libogg-0.dll libnettle-8.dll libmp3lame-0.dll libmodplug-1.dll libmfx-1.dll liblzma-5.dllliblz4.dll liblcms2-2.dll libjpeg-8.dll libintl-8.dll libidn2-0.dll libiconv-2.dll libhogweed-6.dll libharfbuzz-0.dll libgsm.dll libgraphite2.dll libgnutls-30.dll libgmp-10.dll libglib-2.0-0.dll libgcc_s_seh-1.dll libfribidi-0.dll libfreetype-6.dll libfontconfig-1.dll libffi-7.dll libexpat-1.dll libdav1d.dll libcrypto-1_1*.dll libcelt0-2.dll libcaca-0.dll libbz2-1.dll libbrotlidec.dll libbrotlicommon.dll libbluray-2.dll libass-9.dll libarchive-13.dll libaom.dll avutil-56.dll avformat-58.dll avfilter-7.dll avdevice-58.dll avcodec-58.dll $BINARY/
+          cp zlib1.dll xvidcore.dll swscale*.dll swresample*.dll sdl2.dll postproc*.dll lua51.dll libzstd.dll libxml2*.dll libx265.dll libx264*.dll libwinpthread*.dll libwebpmux*.dll libwebp*.dll libwavpack*.dll libvulkan*.dll libvorbisenc*.dll libvorbis*.dll libunistring*.dll libtheoraenc*.dll libtheoradec*.dll libtasn1*.dll libstdc++*.dll libsrt.dll libspeex*.dll librtmp*.dll libpng16*.dll libpcre*.dll libp11-kit*.dll libopus*.dll libopenjp2*.dll libopencore-amrwb*.dll libopencore-amrnb*.dll libopenal*.dll libogg*.dll libnettle*.dll libmp3lame*.dll libmodplug*.dll libmfx*.dll liblzma*.dll liblz4.dll liblcms2*.dll libjpeg*.dll libintl*.dll libidn2*.dll libiconv*.dll libhogweed*.dll libharfbuzz*.dll libgsm.dll libgraphite2.dll libgnutls*.dll libgmp*.dll libglib-2.0*.dll libgcc_s_*.dll libfribidi*.dll libfreetype*.dll libfontconfig*.dll libffi*.dll libexpat*.dll libdav1d.dll libcrypto-1_1*.dll libcelt0*.dll libcaca*.dll libbz2*.dll libbrotlidec.dll libbrotlicommon.dll libbluray*.dll libass*.dll libarchive*.dll libaom.dll avutil*.dll avformat*.dll avfilter*.dll avdevice*.dll avcodec*.dll $BINARY/
           cd -
           
       - name: upload artifact
