--- a/.github/workflows/crashpad.yml
+++ b/.github/workflows/crashpad.yml
@@ -67,9 +67,9 @@ jobs:
           cd ..
           cd ..
           mkdir bin
-          for /r %CD%\crashpad\crashpad\out\Default %a in (*.lib) do copy /y "%a" "%CD%\bin\%~nxa" 
-          for /r %CD%\crashpad\crashpad\out\Default %a in (*.dll) do copy /y "%a" "%CD%\bin\%~nxa" 
-          for /r %CD%\crashpad\crashpad\out\Default %a in (*.exe) do copy /y "%a" "%CD%\bin\%~nxa" 
+          for /r %CD%\crashpad\crashpad\out\Default %a in (*.lib) do copy /y "%a" "%CD%\bin\" 
+          for /r %CD%\crashpad\crashpad\out\Default %a in (*.dll) do copy /y "%a" "%CD%\bin\" 
+          for /r %CD%\crashpad\crashpad\out\Default %a in (*.exe) do copy /y "%a" "%CD%\bin\" 
 
       - name: upload artifact
         uses: actions/upload-artifact@v1
