--- a/.github/workflows/clang-for-windows.yml
+++ b/.github/workflows/clang-for-windows.yml
@@ -17,8 +17,10 @@ jobs:
         include:
           - msvc_arch: x64
             clang_link: llvm-win-x64.7z
+            compiler: cl
           - msvc_arch: x86
             clang_link: llvm-win-x86.7z
+            compiler: cl
     env:
       targetName: llvm-win-${{ matrix.msvc_arch }}
     steps:
@@ -33,8 +35,6 @@ jobs:
 
       - name: Checkout llvm-project
         shell: cmd
-        env:
-          vc_arch: ${{ matrix.msvc_arch }}
         run: |
           git clone --depth=1 https://github.com/llvm/llvm-project.git
 
@@ -47,9 +47,9 @@ jobs:
           set PATH=%CD%\llvm\;%PATH%
           mkdir -p llvm-project\build
           cd llvm-project\build
-          set CC=clang-cl
-          set CXX=clang-cl
-          cmake.exe -GNinja -DCMAKE_C_COMPILER=clang-cl -DCMAKE_CXX_COMPILER=clang-cl -DCMAKE_BUILD_TYPE=release -DLLVM_BUILD_TESTS=OFF -DLLVM_INCLUDE_TESTS=OFF -DLLVM_ENABLE_LIBXML2=OFF -DLLVM_ENABLE_PROJECTS="clang;clang-tools-extra;lld" -DLLVM_TARGETS_TO_BUILD=X86 -DCMAKE_C_FLAGS="/utf-8" -DCMAKE_CXX_FLAGS="/utf-8" -DCMAKE_INSTALL_PREFIX=llvm_win_bin -DLLVM_TEMPORARILY_ALLOW_OLD_TOOLCHAIN=ON ..\llvm
+          set CC=${{ matrix.compiler }}
+          set CXX=${{ matrix.compiler }}
+          cmake.exe -GNinja -DCMAKE_C_COMPILER=${{ matrix.compiler }} -DCMAKE_CXX_COMPILER=${{ matrix.compiler }} -DCMAKE_BUILD_TYPE=release -DLLVM_BUILD_TESTS=OFF -DLLVM_INCLUDE_TESTS=OFF -DLLVM_ENABLE_LIBXML2=OFF -DLLVM_ENABLE_PROJECTS="clang;clang-tools-extra;lld" -DLLVM_TARGETS_TO_BUILD=X86 -DCMAKE_C_FLAGS="/utf-8" -DCMAKE_CXX_FLAGS="/utf-8" -DCMAKE_INSTALL_PREFIX=llvm_win_bin -DLLVM_TEMPORARILY_ALLOW_OLD_TOOLCHAIN=ON ..\llvm
           ninja
           ninja install
 
