--- a/.github/workflows/crashpad.yml
+++ b/.github/workflows/crashpad.yml
@@ -69,9 +69,9 @@ jobs:
         shell: cmd
         run: |
           mkdir bin
-          for /r %CD%\crashpad\crashpad\out\Default %a in (*.lib) do copy /y "%a" "%CD%\bin\" 
-          for /r %CD%\crashpad\crashpad\out\Default %a in (*.dll) do copy /y "%a" "%CD%\bin\" 
-          for /r %CD%\crashpad\crashpad\out\Default %a in (*.exe) do copy /y "%a" "%CD%\bin\" 
+          for /r %CD%\crashpad\crashpad\out\Default %a in (*.lib) do copy "%a" "%CD%\bin\" 
+          for /r %CD%\crashpad\crashpad\out\Default %a in (*.dll) do copy "%a" "%CD%\bin\" 
+          for /r %CD%\crashpad\crashpad\out\Default %a in (*.exe) do copy "%a" "%CD%\bin\" 
 
       - name: upload artifact
         uses: actions/upload-artifact@v1
