--- a/.github/workflows/clang-for-windows.yml
+++ b/.github/workflows/clang-for-windows.yml
@@ -16,11 +16,11 @@ jobs:
       matrix:
         include:
           - msvc_arch: x64
-            clang_link: llvm-win-x64.7z
-            compiler: cl
+            clang_link: https://github.com/llvm/llvm-project/releases/download/llvmorg-12.0.0/LLVM-12.0.0-win64.exe
+            compiler: clang-cl
           - msvc_arch: x86
-            clang_link: llvm-win-x86.7z
-            compiler: cl
+            clang_link: https://github.com/llvm/llvm-project/releases/download/llvmorg-12.0.0/LLVM-12.0.0-win32.exe
+            compiler: clang-cl
     env:
       targetName: llvm-win-${{ matrix.msvc_arch }}
     steps:
@@ -29,8 +29,8 @@ jobs:
         run: |
           mkdir llvm
           cd llvm
-          curl.exe -o LLVM.7z -L ${{ secrets.CLANG_SERVER }}/${{ matrix.clang_link }}
-          7z.exe x LLVM.7z
+          curl.exe -o LLVM.exe -L ${{ matrix.clang_link }}
+          7z.exe x LLVM.exe
           cd ..
 
       - name: Checkout llvm-project
@@ -44,7 +44,7 @@ jobs:
           vc_arch: ${{ matrix.msvc_arch }}
         run: |
           call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" %vc_arch%
-          set PATH=%CD%\llvm\;%PATH%
+          set PATH=%CD%\llvm\bin;%PATH%
           mkdir -p llvm-project\build
           cd llvm-project\build
           set CC=${{ matrix.compiler }}
